tests/spec/pass/map_get_pop_methods.aja
m = {"a": 1, "b": 2}
print(m.get("a"))
print(m.get("z", 9))
print(m.pop("a"))
print(length(m))
print(m.pop("missing", 7))
print(length(m))

sm = {"name": "arya"}
print(sm.get("name"))
print(sm.get("nick", "none"))
print(sm.pop("name"))
print(sm.pop("name", "gone"))

empty = {}
print(empty.get("x", 10))
print(empty.pop("x", 11))
