tests/spec/fail/map_pop_fallback_type_mismatch.aja
m = {"a": 1}
print(m.pop("x", "oops"))
